plugins {
	id 'java'
//	id 'org.springframework.boot' version '3.0.3'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.3'
	//QueryDsl 추가
//	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
}

group = 'com.portfolio'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

sourceSets {
	main {
		resources {
			srcDirs = ['src/main/resources', 'src/main/resources/static']
		}
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//queryDsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	//mybatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	// P6Spy 의존성 추가
	implementation 'p6spy:p6spy:3.9.1'

	//thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'

	//LocalDateTime json으로 변환을 도와주는 라이브러리
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	//jwt 의존성 추가
	// For JWT API
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'

	// For Jackson JSON Processor
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	//DB MySql
	implementation 'mysql:mysql-connector-java:8.0.33'

	//API 문서를 생성하기 위한 springdoc-openapi-ui 추가
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'


	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}

//QueryDsl Qclass 경로 변경
//def querydslDir = "$buildDir/generated/sources/annotationProcessor/java/main"
//
//querydsl {
//	jpa = true
//	querydslSourcesDir = querydslDir
//}
//sourceSets {
//	main.java.srcDir querydslDir
//}
//configurations {
//	querydsl.extendsFrom compileClasspath
//}
//
//compileQuerydsl {
//	options.annotationProcessorPath = configurations.querydsl
//	options.sourcepath = files(querydslDir)
//}
//끝

